# ZuviScribe

./: .gitignore  Dockerfile  README.md  config.yaml  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt  resume_pipeline.py  run_documentary.py  test_svd.py
.github/workflows/: ci.yml
agents/: __init__.py  orchestrator.py  pipeline.py
tests/: __init__.py  conftest.py  test_animation_engine.py  test_audio_synth.py  test_concept_extractor.py  test_downloader.py  test_image_renderer.py  test_integration.py  test_storyboard_generator.py  test_transcriber.py  test_uploader.py  test_video_assembler.py
tools/: __init__.py  animation_engine.py  audio_synth.py  concept_extractor.py  documentary_animator.py  documentary_assembler.py  downloader.py  image_renderer.py  music_generator.py  narration_tts.py  script_writer.py  storyboard_generator.py  transcriber.py  transcript_exporter.py  transcript_refiner.py  uploader.py  video_assembler.py  wan_animator.py
zuviscribe/: __init__.py
